samples/_failures_safe/1761551901_2af9ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e45eed98.c: In function ‘main’:
./samples/SAFE/__tmp_e45eed98.c:144:5: error: expected expression at end of input
  144 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_e45eed98.c:144:5: error: expected declaration or statement at end of input
